--- a/src/app/components/object-of-labor-technological-procedure/object-of-labor-technological-procedure.component.html
+++ b/src/app/components/object-of-labor-technological-procedure/object-of-labor-technological-procedure.component.html
@@ -10,6 +10,9 @@
             (ngModelChange)="getObjectOfLaborTechnologicalProcedures()">
             <option [ngValue]="'OrderOfExecution'" selected>Redosled izvršavanja</option>
             <option [ngValue]="'TechnologicalProcedureName'">Tehnološki postupak</option>
+            <option [ngValue]="'TechnologicalSystemName'">Tehnološki sistem</option>
+            <option [ngValue]="'PlantName'">Pogon</option>
+            <option [ngValue]="'OrganizationalUnitName'">Organizaciona jedinica</option>
         </select>
     </div>
     <div class="col-md-3">
