--- a/src/app/components/production-order/production-order.component.html
+++ b/src/app/components/production-order/production-order.component.html
@@ -144,7 +144,7 @@
                 <label for="objectOfLaborId" [class.text-danger]="formGroup.get('objectOfLaborId')?.invalid && 
                     (formGroup.get('objectOfLaborId')?.dirty ||
                     formGroup.get('objectOfLaborId')?.touched ||
-                    isSubmitted)">Object of labor</label>
+                    isSubmitted)">Predmet rada</label>
                 <select class="form-select" [class.is-invalid]="formGroup.get('objectOfLaborId')?.invalid && 
                     (formGroup.get('objectOfLaborId')?.dirty ||
                     formGroup.get('objectOfLaborId')?.touched ||
