--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -7,34 +7,34 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/employee">Radnici</a>
+                    <a class="nav-link" routerLink="/radnici">Radnici</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/workplace">Radna mesta</a>
+                    <a class="nav-link" routerLink="/radna-mesta">Radna mesta</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/organizationalUnit">Organizacione jedinice</a>
+                    <a class="nav-link" routerLink="/organizacione-jedinice">Organizacione jedinice</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/productionOrder">Nalozi za proizvodnju</a>
+                    <a class="nav-link" routerLink="/nalozi-za-proizvodnju">Nalozi za proizvodnju</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/objectOfLabor">Predmeti rada</a>
+                    <a class="nav-link" routerLink="/predmeti-rada">Predmeti rada</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/productionPlan">Planovi proizvodnje</a>
+                    <a class="nav-link" routerLink="/planovi-proizvodnje">Planovi proizvodnje</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/warehouse">Skladišta</a>
+                    <a class="nav-link" routerLink="/skladista">Skladišta</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/technologicalProcedure">Tehnološki postupci</a>
+                    <a class="nav-link" routerLink="/tehnoloski-postupci">Tehnološki postupci</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/technologicalSystem">Tehnološki sistemi</a>
+                    <a class="nav-link" routerLink="/tehnoloski-sistemi">Tehnološki sistemi</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/plant">Pogoni</a>
+                    <a class="nav-link" routerLink="/pogoni">Pogoni</a>
                 </li>
             </ul>
         </div>
